# eit-reconstruction-toolkit

./: .gitignore  .zenodo.json  404.html  CHANGELOG.md  CLAUDE.md  PROPOSAL.md  README.md  THEORY.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml
api/forward/: index.html
api/inverse/: index.html
api/mesh/: index.html
api/protocol/: index.html
api/utils/: index.html
changelog/: index.html
docs/: changelog.md  eitkit-tech-note.tex  getting_started.md  index.md
docs/api/: forward.md  inverse.md  mesh.md  protocol.md  utils.md
docs/guide/: forward.md  inverse.md  mesh.md  protocol.md  utils.md
eitkit/: __init__.py
eitkit/forward/: __init__.py  fem_assembler.py  gap_model.py  jacobian.py  simulation.py  solver.py
eitkit/inverse/: __init__.py
eitkit/inverse/classical/: __init__.py  tikhonov.py  tv.py
eitkit/mesh/: __init__.py  distmesh2d.py  electrode_placement.py  mesh.py
eitkit/protocol/: __init__.py  measurement.py  noise.py  patterns.py
eitkit/utils/: __init__.py  phantoms.py  visualisation.py
examples/: 01_forward_2d.ipynb  01_reconstruction_demo.ipynb  02_inverse_tikhonov.ipynb
getting_started/: index.html
guide/forward/: index.html
guide/inverse/: index.html
guide/mesh/: index.html
guide/protocol/: index.html
guide/utils/: index.html
scripts/: reconstruct_and_plot.py  verify_forward.py  verify_jacobian.py  verify_mesh.py  verify_protocol.py  verify_utils.py
search/: search_index.json
tests/: conftest.py  test_forward.py  test_inverse.py  test_mesh.py  test_protocol.py  test_tv.py  test_utils.py
