[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eitkit"
version = "0.1.0"
description = "A modular Python toolkit for Electrical Impedance Tomography: forward simulation, classical regularisation, and learning-based reconstruction."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Abd'gafar Tunde Tiamiyu", email = "abdgafartunde@yahoo.com" }
]
keywords = [
    "electrical impedance tomography",
    "EIT",
    "inverse problems",
    "finite element method",
    "medical imaging",
    "scientific computing",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
torch = ["torch>=2.0"]
jax   = ["jax>=0.4", "jaxlib>=0.4"]
dev   = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "mypy>=1.8",
    "pre-commit>=3.6",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
    "mkdocs-gen-files>=0.5",
    "mkdocs-literate-nav>=0.6",
]

[project.urls]
Homepage    = "https://github.com/abdgafartunde/eit-reconstruction-toolkit"
Repository  = "https://github.com/abdgafartunde/eit-reconstruction-toolkit"
Issues      = "https://github.com/abdgafartunde/eit-reconstruction-toolkit/issues"

# ---------------------------------------------------------------------------
# Hatch
# ---------------------------------------------------------------------------
[tool.hatch.build.targets.wheel]
packages = ["eitkit"]

# ---------------------------------------------------------------------------
# Ruff  (linting + formatting)
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]   # line-length handled by formatter

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"
