[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eitkit"
version = "0.1.0"
description = "A modular Python toolkit for Electrical Impedance Tomography: forward simulation, classical regularisation, and learning-based reconstruction."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Abd'gafar Tunde Tiamiyu", email = "abdgafartunde@yahoo.com" }
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
torch = ["torch>=2.0"]
jax   = ["jax>=0.4", "jaxlib>=0.4"]
dev   = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "mypy>=1.8",
    "pre-commit>=3.6",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
    "mkdocs-gen-files>=0.5",
    "mkdocs-literate-nav>=0.6",
]

# ---------------------------------------------------------------------------
# Hatch
# ---------------------------------------------------------------------------
[tool.hatch.build.targets.wheel]
packages = ["eitkit"]

# ---------------------------------------------------------------------------
# Ruff  (linting + formatting)
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py310"
line-length = 88
exclude = [
    "examples/",   # demo notebooks — not held to library lint standards
    "scripts/",    # dev/verification scripts
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = [
    "E501",    # line-length handled by formatter
    "N802",    # function names with uppercase (assemble_K, test_..._dV) — scientific convention
    "N803",    # uppercase argument names — scientific convention
    "N806",    # uppercase variables (J, K, dV) — scientific convention
    "N816",    # mixedCase variables (dV_clean) — scientific convention
    "SIM108",  # ternary operator suggestions — reduce readability in numeric code
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"
